k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  namespace: my-app-k8s       # Must match deployment namespace
  labels:
    app: my-app
spec:
  # Must match your installed Ingress Controller class
  ingressClassName: traefik

  rules:
    - host: app.demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app
                port:
                  number: 80
